--- a/DidacticalEnigma/MainWindow.xaml
+++ b/DidacticalEnigma/MainWindow.xaml
@@ -1,28 +1,37 @@
-﻿<Window x:Class="DidacticalEnigma.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DidacticalEnigma"
-        xmlns:models="clr-namespace:DidacticalEnigma.Models"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="DidacticalEnigma.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DidacticalEnigma"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="clr-namespace:DidacticalEnigma.Models"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Window.DataContext>
-        <local:MainWindowVM/>
+        <local:MainWindowVM />
     </Window.DataContext>
     <Grid>
-        <Grid.ColumnDefinitions/>
+        <Grid.ColumnDefinitions />
         <Grid.RowDefinitions>
-            <RowDefinition Height="10*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="10*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
-        <FlowDocumentScrollViewer Grid.Row="0" >
+        <FlowDocumentScrollViewer Grid.Row="0">
             <local:SimpleFlowDocument DataSource="{Binding T}" RootTextElementType="{x:Type Paragraph}">
                 <local:SimpleFlowDocument.ContentTemplateSelector>
                     <local:TrivialTemplateSelector>
                         <local:TrivialTemplateSelector.Default>
                             <DataTemplate DataType="{x:Type models:CodePointVM}">
-                                <Run FontSize="24" Background="Transparent" ToolTipService.InitialShowDelay="0" ToolTipService.ShowDuration="120000" Text="{Binding StringForm, Mode=OneWay}">
+                                <Run
+                                    Background="Transparent"
+                                    FontSize="24"
+                                    Text="{Binding StringForm, Mode=OneWay}"
+                                    ToolTipService.InitialShowDelay="0"
+                                    ToolTipService.IsEnabled="{Binding Word.DictionaryStringBlurb}"
+                                    ToolTipService.ShowDuration="120000">
                                     <Run.ToolTip>
                                         <TextBlock Text="{Binding Word.DictionaryStringBlurb, Mode=OneWay}" />
                                     </Run.ToolTip>
@@ -35,11 +44,19 @@
         </FlowDocumentScrollViewer>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" TextWrapping="Wrap" Text="{Binding S}" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
-            <Button Grid.Column="1" Content="Update" Command="{Binding Update}"/>
+            <TextBox
+                Grid.Column="0"
+                AcceptsReturn="True"
+                Text="{Binding S}"
+                TextWrapping="Wrap"
+                VerticalScrollBarVisibility="Auto" />
+            <Button
+                Grid.Column="1"
+                Command="{Binding Update}"
+                Content="Update" />
         </Grid>
     </Grid>
 </Window>
