--- a/DidacticalEnigma/MainWindow.xaml
+++ b/DidacticalEnigma/MainWindow.xaml
@@ -24,59 +24,32 @@
             <Button Content="Katakana" />
             <Button Content="About" />
         </ToolBar>
-        <ListView
-            Grid.Row="1"
-            ItemsSource="{Binding AnnotatedOutput}"
-            ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-            <ListView.ItemsPanel>
+        <ItemsControl Grid.Row="1" ItemsSource="{Binding Lines}">
+            <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel />
+                    <StackPanel Orientation="Vertical" />
                 </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock
-                        Width="Auto"
-                        Background="{Binding IsMouseOver, RelativeSource={RelativeSource Self}, Converter={x:Static enigma:BooleanToBrushConverter.Default}}"
-                        FontSize="24"
-                        Text="{Binding StringForm, Mode=OneWay}"
-                        ToolTipService.InitialShowDelay="0"
-                        ToolTipService.ShowDuration="120000">
-                        <TextBlock.ToolTip>
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Text="Has similar letters"
-                                    Visibility="{Binding HasSimilar, Converter={x:Static enigma:BooleanToVisibilityConverter.Default}}" />
-                                <TextBlock Grid.Row="1" Text="{Binding FullName, Mode=OneWay}" />
-                                <TextBlock Grid.Row="2" Text="{Binding Word.DictionaryStringBlurb, Mode=OneWay}" />
-                            </Grid>
-
-                        </TextBlock.ToolTip>
-                        <TextBlock.ContextMenu>
-                            <ContextMenu ItemsSource="{Binding Similar}">
-                                <ContextMenu.ItemContainerStyle>
-                                    <Style TargetType="MenuItem">
-                                        <Setter Property="Command" Value="{Binding DataContext.PlaceInClipboard, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
-                                        <Setter Property="CommandParameter" Value="{Binding .}" />
-                                    </Style>
-                                </ContextMenu.ItemContainerStyle>
-                                <ContextMenu.ItemTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding ., Converter={x:Static enigma:CodePointToLongStringConverter.Default}}" />
-                                    </DataTemplate>
-                                </ContextMenu.ItemTemplate>
-                            </ContextMenu>
-                        </TextBlock.ContextMenu>
-                    </TextBlock>
+                    <ItemsControl ItemsSource="{Binding Words}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock FontSize="24" Text="{Binding StringForm}" />
+                                    <TextBlock FontSize="24" Text=" " />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -86,12 +59,14 @@
             <TextBox
                 Grid.Column="0"
                 AcceptsReturn="True"
+                FontSize="18"
                 Text="{Binding Input}"
                 TextWrapping="Wrap"
                 VerticalScrollBarVisibility="Auto" />
             <TextBox
                 Grid.Column="1"
                 AcceptsReturn="True"
+                FontSize="18"
                 Text="{Binding RawOutput, UpdateSourceTrigger=PropertyChanged}"
                 TextWrapping="Wrap"
                 VerticalScrollBarVisibility="Auto" />
