--- a/DidacticalEnigma/MainWindow.xaml
+++ b/DidacticalEnigma/MainWindow.xaml
@@ -16,16 +16,34 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="4*" />
             <RowDefinition Height="5*" />
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
         <ToolBar Grid.Row="0" Grid.ColumnSpan="2">
             <Button Content="Hiragana" />
             <Button Content="Katakana" />
-            <Button Content="About" />
+            <Button Click="ShowAboutWindow" Content="About" />
         </ToolBar>
-        <enigma:JapaneseTextPreview Grid.Row="1" />
+        <enigma:JapaneseTextPreview x:Name="Jp" Grid.Row="1" />
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock
+                Grid.Column="0"
+                FontSize="18"
+                Text="{Binding SelectedCharacter.FullName, ElementName=Jp}"
+                TextWrapping="Wrap" />
+            <ScrollViewer Grid.Column="1">
+                <TextBlock
+                    FontSize="18"
+                    Text="{Binding SelectedWord.DictionaryStringBlurb, ElementName=Jp}"
+                    TextWrapping="Wrap" />
+            </ScrollViewer>
+        </Grid>
+        <Grid Grid.Row="3" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
